# current-macro-news-summarizer

./: .gitignore  main.py  pyproject.toml  run_pipeline.sh
app/: __init__.py  __main__.py
app/config/: db.py  settings.py
app/models/: __init__.py  base.py  macro_event.py
app/pipeline/: embedding_service.py  event_similarity.py  event_store.py  run.py
app/prompts/: __init__.py  macro_classifier.py  macro_signals.py
app/schemas/: news_article.py
app/services/: aggregate_macro.py  classify.py  extract.py  log.py
app/utils/: __init__.py  db_client.py  logger.py  s3_log.py  secrets_manager.py
