[project]
name = "current-macro-news-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pgvector>=0.2.6",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.48",
    "openai>=1.0.0",
    "langchain-core>=1.2.20",
    "boto3>=1.42.71",
]
